Fix advanced search constraint rendering for #295. Set max width for text and hide overflow.

--- a/app/webpacker/src/stylesheets/discover/_constraints.scss
+++ b/app/webpacker/src/stylesheets/discover/_constraints.scss
@@ -1,5 +1,3 @@
-@use "sass:math";
-
 .constraints-container {
   @extend .mb-2;
 
@@ -25,24 +23,27 @@
   }
 
   .constraint-value {
+    display: inline-block;
     cursor: pointer;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
+    vertical-align: top;
 
-    @media (max-width: breakpoint-max(xs)) {
-      max-width: math.div(breakpoint-max(xs), 2);
+    @media (max-width: breakpoint-min(sm)) {
+      max-width: breakpoint-min(sm) * .5;
     }
 
-    @media (min-width: breakpoint-min(sm)) and (max-width: breakpoint-max(sm)) {
-      max-width: math.div(breakpoint-min(sm), 2);
+    @media (min-width: breakpoint-min(sm)) and (max-width: breakpoint-min(md)) {
+      max-width: breakpoint-min(sm) * .5;
     }
 
-    @media (min-width: breakpoint-min(md)) and (max-width: breakpoint-max(md)) {
-      max-width: math.div(breakpoint-min(md), 2);
+    @media (min-width: breakpoint-min(md)) and (max-width: breakpoint-min(lg)) {
+      max-width: breakpoint-min(md) * .5;
     }
 
     @media (min-width: breakpoint-min(lg)) {
-      max-width: math.div(breakpoint-min(lg), 2);
+      max-width: breakpoint-min(lg) * .5;
     }
 
     &:hover,
@@ -63,5 +64,10 @@
   .remove:hover,
   .remove:active {
     @extend .btn-danger;
+  }
+
+  // wbr elements are used to break up some facet labels. Ignore them here.
+  wbr {
+    display: none;
   }
 }
